--- a/templates/Cadastro_Itens.html
+++ b/templates/Cadastro_Itens.html
@@ -62,11 +62,15 @@
                 <tr class="table-primary">                        
                     <th>Item</th>
                     <th>Descrição</th>
+                    <th>Ncm</th>
+                    <th>Família</th>
                     <th>Cliente</th>
+                    <th>Código do Cliente</th>
                     <th>Material</th>
-                    <th>Peso</th>
-                    <th>Fino</th>
-                    <th>Unidade</th>
+                    <th>Peso Unitário</th>
+                    <th>Fino Unitário</th>
+                    <th>Unidade Omie</th>
+                    <th>Unidade Visual</th>
                     <th>Uso</th>
                     <th>Data Alteração</th>
                     <th>Observação</th>
@@ -78,11 +82,15 @@
                     <tr>                      
                         <td>{{row.item}}</td>
                         <td>{{row.descricao}}</td>
+                        <td>{{row.ncm}}</td>
+                        <td>{{row.familia}}</td>
                         <td>{{row.cliente}}</td>
+                        <td>{{row.codigo_cliente}}</td>
                         <td>{{row.material}}</td>
                         <td>{{row.peso}}</td>
                         <td>{{row.fino}}</td>
                         <td>{{row.unidade}}</td>
+                        <td>{{row.um_visual}}</td>
                         <td>{{row.uso}}</td>
                         <td>{{row.data_alteracao}}</td>
                         <td>{{row.obs}}</td>
