--- a/templates/mov_op_visual.html
+++ b/templates/mov_op_visual.html
@@ -460,7 +460,7 @@
 
 
 
-
+<!-- data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom" -->
 <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
     <div class="offcanvas-header">
     <h5 class="offcanvas-title" id="offcanvasBottomLabel">Processando os Dados ...
@@ -476,6 +476,7 @@
     </div>
     </div>
     </div>
+    
     <script>
       let barra=document.getElementById("pb1");
       let carga=0;
