--- a/templates/Familia.html
+++ b/templates/Familia.html
@@ -32,7 +32,7 @@
 <div class="w-100" style="padding-top: 0px !important;">
     <div class="w-100"> 
         <div class="container">
-            <a href="{{url_for('op_cards')}}" type="button" class="btn btn-success ms-2">Voltar</a>
+            <a href="{{url_for('index_config')}}" type="button" class="btn btn-success ms-2">Voltar</a>
             <button type="button" class="btn btn-info ms-1" data-bs-toggle="modal" data-bs-target="#addFamiliaModal">Adicionar Família</button>
             <button type="button" class="btn btn-warning ms-1" onclick=window.location.href="{{ url_for('exportar_familia') }}">Exportar para Excel</button>
         </div>
