--- a/templates/ordens_producao_visual.html
+++ b/templates/ordens_producao_visual.html
@@ -30,10 +30,11 @@
                 
                
                 <div  class="w-100"> 
-                   
-
+                    
+                    <div class="input-group-append">
+                    <a href="{{url_for('index')}}" type="button" class="btn btn-info ms-2">Voltar</a>
                     <button type="button" class="btn btn-success ms-1 d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#add_op_modal_visual">Abrir Ordem de Produção</button>
-
+                    </div>
                     <h2 class="d-flex justify-content-center mt-2"><strong>Ordem de produção Visual</strong></h2>
 
                     
@@ -114,7 +115,7 @@
                                     <input type="hidden" name="fino_retornado" value="{{row.fino_retornado}}">     
                                     <input type="hidden" name="setor" value="{{row.setor}}">
                                     <input type="hidden" name="operador" value="{{row.operador}}">     
-                                    <button type="submit" for="myForm" class="btn btn-primary btn-xs"><img
+                                    <button type="submit" for="myForm" class="btn btn-primary btn-xs" ><img
                                     src="{{url_for('static', filename='images/eye.svg')}}" alt=""></button>                           
                                 </form>
                                 </td>
@@ -154,7 +155,8 @@
                                                     <input type="hidden" name="peso_retornado" value="{{row.peso_retornado}}">
                                                     <input type="hidden" name="fino_enviado" value="{{row.fino_enviado}}">
                                                     <input type="hidden" name="fino_retornado" value="{{row.fino_retornado}}">     
-                                                    <button type="submit" for="myForm" class="btn btn-info btn-xs"><img
+                                                    <button type="submit" for="myForm" class="btn btn-info btn-xs" 
+                                                    data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom"><img
                                             src="{{url_for('static', filename='images/card-list.svg')}}" alt=""></button>                           
                                         </form>
                                     </div>
@@ -205,5 +207,36 @@
     </div>
 </div>
 {%include 'add_modal_visual.html'%}
+
+
+
+<div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+    <div class="offcanvas-header">
+    <h5 class="offcanvas-title" id="offcanvasBottomLabel">Processando os Dados ...
+    <div class="spinner-grow text-info" role="status">
+    <span class="visually-hidden">Loading...</span>
+    </div>
+    </h5>
+    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body small">
+    <div id="pb1" class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+    <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
+    </div>
+    </div>
+    </div>
+    
+    <script>
+      let barra=document.getElementById("pb1");
+      let carga=0;
+      let intBarra=setInterval(()=>{
+          barra.style.width=carga+"%";
+          carga++;
+          if(carga>=100){
+              carga=0;
+          }
+      },80);
+    </script> 
+
 
 {% endblock %}
