--- a/templates/Estoque_Omie.html
+++ b/templates/Estoque_Omie.html
@@ -30,7 +30,7 @@
 <div class="w-100" style="padding-top: 0px !important;">
     <div class="w-100"> 
         <div class="container">
-            <a href="{{url_for('op_cards')}}" type="button" class="btn btn-success ms-2">Voltar</a>
+            <a href="{{url_for('index_config')}}" type="button" class="btn btn-success ms-2">Voltar</a>
             <button type="button" class="btn btn-primary ms-1" data-bs-toggle="modal" data-bs-target="#adicionarConfigModal">Adicionar Configuração</button>
             <button type="button" class="btn btn-info ms-1" onclick="exportarParaExcel()">Exportar para Excel</button>
         </div>
