--- a/templates/pedidos.html
+++ b/templates/pedidos.html
@@ -25,11 +25,11 @@
     }
 </style>
     <div class="w-100" style="padding-top: 0px !important;">
-       
+        <div class="input-group-append">
         <a href="{{url_for('op_cards')}}" type="button" class="btn btn-success ms-2">Voltar</a>
         <button type="button" class="btn btn-info ms-1 d-flex justify-content-end" data-bs-toggle="modal" data-bs-target="#addPedidoModal">Adicionar Pedido</button>
         <button id="exportExcel" class="btn btn-warning ms-1 d-flex justify-content-end">Exportar para Excel</button>
-       
+        </div>
     
     <div class="w-100"> 
         
