--- a/templates/pedidos_faturados.html
+++ b/templates/pedidos_faturados.html
@@ -31,7 +31,7 @@
 
 <div class="w-100" style="padding-top: 0px !important;">
     <div class="w-100">
-        <div class="container">
+        <div class="input-group-append">
         <a href="{{url_for('op_cards')}}" type="button" class="btn btn-success ms-2">Voltar</a>
         <button id="exportExcel" class="btn btn-warning ms-1 d-flex justify-content-end">Exportar para Excel</button>
         </div>
