--- a/templates/mov_op_visual.html
+++ b/templates/mov_op_visual.html
@@ -291,8 +291,8 @@
                 <td>Peso.Prod</td>
                 <td>Peso Fino</td>
                 <td>Q_A_Prod</td>
-                <td>Peso</td>
-                <td>OP Origem</td>
+                <td>Peso_Prod</td>
+                <td>Origem</td>
                 <td>Local</td>
                 <td>Operador</td>
                 <td colspan="2">Edições</td>
