--- a/templates/lotes_mov_op.html
+++ b/templates/lotes_mov_op.html
@@ -38,9 +38,27 @@
    
    
     <div class="input-group-append">
-        <a href="/op/{{op_referencia}}" type="button" class="btn btn-success ms-2">Voltar</a>
+       
+    {% for row in op_dados %}
+    <form action="/op/{{row.numero_op_visual}}" method="post" type="hidden" >
+        <input type="hidden" name="item" value="{{row.item}}">
+        <input type="hidden" name="numero_op_visual" value="{{row.numero_op_visual}}">
+        <input type="hidden" name="op_qtd" value="{{row.quantidade}}">
+        <input type="hidden" name="piv" value="{{row.piv}}">
+        <input type="hidden" name="setor" value="{{row.setor}}">
+        <input type="hidden" name="operador" value="{{row.operador}}">
+        <input type="hidden" name="descricao" value="{{row.descrição}}">
+        <input type="hidden" name="peso_enviado" value="{{row.peso_enviado}}">
+        <input type="hidden" name="peso_retornado" value="{{row.peso_retornado}}">
+        <input type="hidden" name="fino_enviado" value="{{row.fino_enviado}}">
+        <input type="hidden" name="fino_retornado" value="{{row.fino_retornado}}">     
+        <button type="submit" for="myForm" class="btn btn-info btn-xs" 
+        data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">Voltar</button>                           
+    </form>
     </div>
-    
+    {%endfor%}
+
+
 
     <table class="table table-hover table-info">
         <tr>
@@ -226,7 +244,7 @@
                         <input type="hidden" name="quantidade" value="{{row.quantidade}}">
                         <input type="hidden" name="id" value="{{row.id}}">
                         <input type="hidden" name="id_mov" value="{{id_mov}}">
-                        <input type="hidden" name="tipo_mov" value="{{row.tipo_mov}}">
+                        <input type="hidden" name="tipo_mov" value="{{tipo_mov}}">
                         <input type="hidden" name="local" value="{{row.local}}">
                         <input type="hidden" name="referencia" value="{{op_referencia}}">
                         <input type="hidden" name="lote_visual" value="{{row.lote_visual}}">
