--- a/templates/lotes_mov_op_prod.html
+++ b/templates/lotes_mov_op_prod.html
@@ -23,23 +23,39 @@
     }
 </style>
 
-
 <div class=" p-2 w-100 table-responsive margin-top">
     <div class="input-group mb-3 d-flex justify-content-center">
-        
-        <h3 class="d-flex justify-content-center mt-2">
 
-           Lotes Produzidos na Ordem de produção: {{op_referencia}}
-           
-        </h3>
-        
-        
+        <h3 class="d-flex justify-content-center mt-2">Lotes Produzidos na Ordem de produção: {{op_referencia}}</h3>
     </div>
-   
-   
+
     <div class="input-group-append">
-        <a href="/op/{{op_referencia}}" type="button" class="btn btn-success ms-2">Voltar</a>
+
+    
+    {% for row in op_dados %}
+    <form action="/op/{{row.numero_op_visual}}" method="post" type="hidden" >
+        <input type="hidden" name="item" value="{{row.item}}">
+        <input type="hidden" name="numero_op_visual" value="{{row.numero_op_visual}}">
+        <input type="hidden" name="op_qtd" value="{{row.quantidade}}">
+        <input type="hidden" name="piv" value="{{row.piv}}">
+        <input type="hidden" name="setor" value="{{row.setor}}">
+        <input type="hidden" name="operador" value="{{row.operador}}">
+        <input type="hidden" name="descricao" value="{{row.descrição}}">
+        <input type="hidden" name="peso_enviado" value="{{row.peso_enviado}}">
+        <input type="hidden" name="peso_retornado" value="{{row.peso_retornado}}">
+        <input type="hidden" name="fino_enviado" value="{{row.fino_enviado}}">
+        <input type="hidden" name="fino_retornado" value="{{row.fino_retornado}}">     
+        <button type="submit" for="myForm" class="btn btn-info btn-xs" 
+        data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">Voltar</button>                           
+    </form>
+
+    {%endfor%}
     </div>
+
+
+<div class=" p-2 w-100 table-responsive margin-top">
+    
+    
     
 
     <table class="table table-hover table-info">
@@ -82,7 +98,7 @@
         
             
 
-
+    </div>
 <div class="posições w-100" >
     
 
@@ -124,24 +140,17 @@
                          <div>
                             <form action="{{url_for('deleta_lotes_mov_op')}}" method="post" type="hidden" onclick="return confirm('Deseja desfazer este movimento?')">
                                 <input type="hidden" name="id" value="{{row.id}}">
+                                <input type="hidden" name="referencia" value="{{row.referencia}}">
                                 <input type="hidden" name="id_lote" value="{{row.id_lote}}">
                                 <input type="hidden" name="quantidade" value="{{row.quantidade}}">
-                                <input type="hidden" name="peso" value="{{row.peso}}">     
+                                <input type="hidden" name="peso" value="{{row.peso}}">
+                                <input type="hidden" name="fino" value="{{row.fino}}">       
                                 <button type="submit" class="btn btn-danger btn-xs"><img
                                     src="{{url_for('static', filename='images/trash3-fill.svg')}}" alt="">
                                 </button>                           
                             </form>
                          </div>
-                        
-                         <!-- <div>
-                            <form action="/lotes_prod/{{row.op_referencia}}/{{row.item_estrutura}}" method="post" type="hidden" >
-                                        <input type="hidden" name="item_estrutura" value="{{row.item_estrutura}}">
-                                        <input type="hidden" name="op_referencia" value="{{row.op_referencia}}">
-                                        
-                                        <button type="submit" class="btn btn-info btn-xs"><img
-                                src="{{url_for('static', filename='images/card-list.svg')}}" alt=""></button>                           
-                            </form>
-                         </div>   -->
+                    
                         </div>
                     
                 </td>
@@ -154,4 +163,37 @@
 
 
 
+        <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+            <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasBottomLabel">Processando os Dados ...
+            <div class="spinner-grow text-info" role="status">
+            <span class="visually-hidden">Loading...</span>
+            </div>
+            </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body small">
+            <div id="pb1" class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+            <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
+            </div>
+            </div>
+            </div>
+  
+            <script>
+              let barra=document.getElementById("pb1");
+              let carga=0;
+              let intBarra=setInterval(()=>{
+                  barra.style.width=carga+"%";
+                  carga++;
+                  if(carga>=100){
+                      carga=0;
+                  }
+              },80);
+            </script>        
+       
+   
+
+
+    </div>
+</div>
 {% endblock %}
