--- a/templates/lote_geral_modal.html
+++ b/templates/lote_geral_modal.html
@@ -32,12 +32,13 @@
                     </div>
                     
                     <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Tipo do Lote:</label>
+                        <label for="recipient-name" class="col-form-label">Tipo Movimento:</label>
                     <select class="form-select" aria-label="Default select example" name="tipo">
                         <!-- <option selected>Posição</option> -->
-                        <option value="Visual">Normal</option>
+                        <option value="Visual">Inventário Rotátivo</option>
                         <option value="Temporario">Adiantado</option>
-                        <option value="Temporario">Material Produzido</option>
+                        <option value="Material Produzido">Material Produzido</option>
+                        <option value="Setor_Cobre"></option>Para Setor de Cobre</option>
                     </select> 
                     </div>
 
@@ -59,7 +60,7 @@
                   
                     <div class="form-group">
                         <label for="recipient-name" class="col-form-label">Observação:</label>
-                        <input type="text" name="obs" class="form-control" placeholder="ativado">
+                        <input type="text" name="obs" class="form-control" placeholder="Obs se haver">
                     </div>
                     
                     <div class="modal-footer">
