--- a/templates/lotes_mov_op_prod.html
+++ b/templates/lotes_mov_op_prod.html
@@ -140,6 +140,7 @@
                          <div>
                             <form action="{{url_for('deleta_lotes_mov_op')}}" method="post" type="hidden" onclick="return confirm('Deseja desfazer este movimento?')">
                                 <input type="hidden" name="id" value="{{row.id}}">
+                                <input type="hidden" name="item" value="{{row.item}}">
                                 <input type="hidden" name="referencia" value="{{row.referencia}}">
                                 <input type="hidden" name="id_lote" value="{{row.id_lote}}">
                                 <input type="hidden" name="quantidade" value="{{row.quantidade}}">
