--- a/templates/index_config.html
+++ b/templates/index_config.html
@@ -34,7 +34,7 @@
 		color: rgb(255, 0, 0);*/
 	}
     .background-black {
-        background-color: #02143b; /* Define a cor de fundo como verde */
+        background-color: #006e6e; /* Define a cor de fundo como verde */
   }
 </style>
 
@@ -73,8 +73,8 @@
             <img src="{{ url_for('static', filename='images/dados.svg')}}" alt="Gerenciamento de ops">
         </div>
         <h3>Informações</h3>
-        <span>Upload de Planilha de Inventário</span>
-        <a href="{{ url_for('estoque_visual')}}"><button>Acessar</button></a>
+        <span>Upload de Arquivos para Configuração</span>
+        <a href="{{ url_for('index_uploads')}}"><button>Acessar</button></a>
     </section>
     <section class="card yellow">
         <div class="icon">
