--- a/templates/index_uploads.html
+++ b/templates/index_uploads.html
@@ -50,7 +50,7 @@
         </div>
         <h3>OP Visual</h3>
         <span>Visualizar e Gerenciar Ops</span>
-        <a href="{{ url_for('operadores')}}"><button>Acessar</button></a>
+        <a href="{{ url_for('ordem_producao')}}"><button>Acessar</button></a>
     </section>
     <section class="card shop">
         <div class="icon">
@@ -58,7 +58,7 @@
         </div>
         <h3>Estrutura de OP</h3>
         <span>Gerenciar Estruturas de Ordens de Pordução</span>
-        <a href="{{ url_for('familia')}}"><button>Acessar</button></a>
+        <a href="{{ url_for('admin_estrutura_ops')}}"><button>Acessar</button></a>
     </section>
     <section class="card red">
         <div class="icon">
@@ -66,7 +66,7 @@
         </div>
         <h3>Lotes das Ops</h3>
         <span>Gerenciar Lotes das Ordens de Pordução</span>
-        <a href="{{ url_for('sequencias')}}"><button>Acessar</button></a>
+        <a href="{{ url_for('admin_lotes_ops')}}"><button>Acessar</button></a>
     </section>
     <section class="card green">
         <div class="icon">
@@ -91,7 +91,7 @@
         </div>
         <h3>Usuários</h3>
         <span>Controle Acesso de Usuários</span>
-        <a href="{{ url_for('estoque_omie')}}"><button>Acessar</button></a>
+        <a href="{{ url_for('admin_users')}}"><button>Acessar</button></a>
     </section>
 </main>
 
