--- a/templates/index_uploads.html
+++ b/templates/index_uploads.html
@@ -57,7 +57,7 @@
             <img src="{{ url_for('static', filename='images/Estrutura.svg')}}" alt="Gerenciamento de ops">
         </div>
         <h3>Estrutura de OP</h3>
-        <span>Gerenciar Estruturas de Ordens de Pordução</span>
+        <span>Estruturas de Ordens de Pordução</span>
         <a href="{{ url_for('admin_estrutura_ops')}}"><button>Acessar</button></a>
     </section>
     <section class="card red">
