--- a/templates/admin_lotes_ops.html
+++ b/templates/admin_lotes_ops.html
@@ -1,7 +1,9 @@
+{% extends 'base.html' %}
 
+{% include 'header.html' %}
 
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +12,12 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+{% block title %} Administrar Lotes de movimentos Ops {% endblock %}
+{% block body %}
+
 <div class="container mt-4">
     <div class="d-flex justify-content-between mb-3">
-        <h2>Admin Lotes de Ops</h2>
+        <h2>Administrar Movimentos de Lotes de Ops</h2>
         <div>
             <a href="{{ url_for('index_uploads') }}" class="btn btn-success">Voltar</a>
             <button id="exportExcel" class="btn btn-warning">Exportar para Excel</button>
@@ -183,5 +187,4 @@
         }
     </script>
 </div>
-</body>
-</html>
+{% endblock %}
