--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -1,7 +1,9 @@
+{% extends 'base.html' %}
 
+{% include 'header.html' %}
 
 <!DOCTYPE html>
-<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,10 +12,11 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body>
+{% block title %} Administrar Usuários {% endblock %}
+{% block body %}
 <div class="container mt-4">
     <div class="d-flex justify-content-between mb-3">
-        <h2>Admin Users</h2>
+        <h2>Administrar Usuários</h2>
         <div>
             <a href="{{ url_for('index_uploads') }}" class="btn btn-success">Voltar</a>
             <button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#addUserModal">Adicionar Usuário</button>
@@ -260,5 +263,4 @@ $('#editValidacaoForm').on('submit', function (e) {
 });
 
 </script>
-</body>
-</html>
+{% endblock %}
