--- a/templates/ordem_producao.html
+++ b/templates/ordem_producao.html
@@ -48,13 +48,17 @@
             </form>
         </div>
         <div class="input-group d-flex justify-content-end w-100">
+            <form method="POST" action="{{url_for('ordem_producao_tree')}}" class="input-group w-50 input-group d-flex justify-content-end ms-4"> 
+                <button class="btn btn-dark ms-1" type="submit">Op Arvóre</button> 
+            </form>
+            
         <form method="POST" action="{{url_for('ordem_producao')}}" class="input-group w-50 input-group d-flex justify-content-end ms-4"> 
             
             <input class="form-check-input" type="hidden" value="1" id="filtro_encerrada" name="filtro_encerrada">
             <button class="btn btn-dark ms-1" type="submit">Não Mostrar OPs Encerradas</button> 
-            </div>
+            
         </form>
-
+    </div>
         <div class="container w-100">
             {% with messages=get_flashed_messages(with_categories=true) %}
                 {% if messages %}
